Request id-s are now generated on server side. Refactorings
